# ModbusEmulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app_icon.rc  resources.qrc
Sources/: LogHandler.cpp  LogHandler.h  ModbusDataStore.cpp  ModbusDataStore.h  ModbusServer.cpp  ModbusServer.h  ProjectManager.cpp  ProjectManager.h  main.cpp
examples/: demo_project.json
qml/: CoilsView.qml  ConnectionDrawer.qml  DashboardView.qml  GroupDialog.qml  LogPanel.qml  Main.qml  ModbusControl.qml  RegisterDelegate.qml  RegisterNameDialog.qml  RegisterView.qml  SimulationPanel.qml  StatTile.qml  StatusIndicator.qml  Theme.qml  ValueChart.qml
